--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,9 @@ button:focus {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.about-list-item {
+  width: calc(100% -72 / 4);
+}
 .about-section-text {
   font-size: 16px;
   line-height: 1.5;
@@ -188,13 +191,13 @@ button:focus {
 .team-list {
   display: flex;
   gap: 24px;
-  width: calc(100% - 72 / 4);
 }
 .team-list-item {
   background-color: #ffffff;
   width: 265px;
   height: 381px;
   border-radius: 0px 0px 4px 4px;
+  width: calc(100% - 72 / 4);
 }
 .team-section-container {
   padding: 32px 0;
@@ -234,6 +237,7 @@ button:focus {
   width: 360px;
   height: 420px;
   border: #e7e9fc 1px solid;
+  width: calc(100%-48 / 2);
 }
 .portfolio-container {
   padding: 32px 16px;
