--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,9 @@ img {
   display: block;
 }
 .container {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 /* header */
 .page-header {
