--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,10 @@ img {
 }
 .container {
   max-width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 /* header */
 .page-header {
