--- a/css/styles.css
+++ b/css/styles.css
@@ -37,18 +37,14 @@ img {
 }
 .page-header-container {
   display: flex;
-
+  align-items: center;
   justify-content: space-between;
 }
 .page-navigation {
   align-items: center;
   display: flex;
-  align-content: center;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 .logo {
-  display: flex;
   margin-right: 76px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -66,6 +62,7 @@ img {
   gap: 40px;
 }
 .header-link {
+  display: block;
   padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
@@ -76,6 +73,9 @@ img {
 .header-link:hover,
 .header-link:focus {
   color: #404bbf;
+}
+.header-address {
+  font-style: normal;
 }
 .header-address-list {
   display: flex;
@@ -165,7 +165,7 @@ button:focus {
   color: #2e2f42;
 }
 .about-list-item {
-  width: calc(100% -72 / 4);
+  width: calc((100% - 72px) / 4);
 }
 .about-section-text {
   font-size: 16px;
@@ -200,7 +200,7 @@ button:focus {
   background-color: #ffffff;
   height: 381px;
   border-radius: 0px 0px 4px 4px;
-  width: calc(100% - 72 / 4);
+  width: calc((100% - 72px) / 4);
 }
 .team-section-container {
   padding: 32px 0;
@@ -221,7 +221,6 @@ button:focus {
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
-  padding-top: 8px;
 }
 /* portfolio */
 .portfolio-section {
@@ -233,13 +232,9 @@ button:focus {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  padding-bottom: 120px;
 }
 .portfolio-list-item {
-  width: 360px;
-  height: 420px;
-  border: #e7e9fc 1px solid;
-  width: calc(100%-48 / 2);
+  width: calc((100% - 48px) / 3);
 }
 .portfolio-container {
   padding: 32px 16px;
@@ -268,7 +263,6 @@ button:focus {
   padding: 100px 0;
 }
 .footer-text {
-  display: flex;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -278,7 +272,6 @@ button:focus {
 }
 .logo-footer {
   display: inline-block;
-  margin-right: 76px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
